--- a/do_coronafacturas_theme/css/styles-general.css
+++ b/do_coronafacturas_theme/css/styles-general.css
@@ -1456,3 +1456,48 @@ body.agegate-visible .header_m{
   #m_x{
     display: none;
   }
+
+   /* estilos pag legales */
+
+   .text_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+  }
+  
+  .text_div h1 {
+    font-family: 'Corona Headline';
+    color: #36354C;
+    font-size: 2.5rem;
+    margin-bottom: 2.2rem;
+  }
+  
+  .text_div .text_text p {
+    font-family: 'Inter', sans-serif;
+    color: #0D2240;
+    font-size: .9rem;
+    Height: 600px;
+    overflow-x: hidden;
+  }
+  
+  .text_div .text_text p::-webkit-scrollbar {
+    width: 6px;
+    border: 1px solid rgba(54,53,76,.5);
+    border-radius: 5px;
+  }
+  
+  .text_div .text_text p::-webkit-scrollbar-thumb {
+    background-color: #FFC627;
+    border: 1px solid #36354C;
+    border-radius: 2px;
+  }
+  
+  @media (max-width: 970px) {
+    
+    .text_div h1 {
+      font-size: 1.2rem;
+    }
+  }
