--- a/do_coronafacturas_theme/css/styles-general.css
+++ b/do_coronafacturas_theme/css/styles-general.css
@@ -1457,9 +1457,9 @@ body.agegate-visible .header_m{
     display: none;
   }
 
-   /* estilos pag legales */
+  /* estilos pag legales */
 
-   .text_div {
+  .text_div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1502,3 +1502,45 @@ body.agegate-visible .header_m{
       font-size: 1.2rem;
     }
   }
+
+
+#politicas-proteccion {
+  height: 600px;
+  overflow-x: hidden;
+  padding: 0 1rem;
+}
+#politicas-proteccion::-webkit-scrollbar {
+  width: 6px;
+  border: 1px solid rgba(54,53,76,.5);
+  border-radius: 5px;
+}
+#politicas-proteccion::-webkit-scrollbar-thumb {
+  background-color: #FFC627;
+  border: 1px solid #36354C;
+  border-radius: 2px;
+}
+#politicas-proteccion p {
+  font-family: 'Inter', sans-serif;
+  color: #0D2240;
+  font-size: .9rem;
+  height: unset !important;
+  overflow-x: unset !important;
+}
+
+#politicas-proteccion ul li {
+  font-family: 'Inter', sans-serif;
+  color: #0D2240;
+  font-size: .9rem;
+  padding: 0 1rem;
+}
+
+@media (max-width: 970px) {
+  
+  #politicas-proteccion p {
+    font-size: .8rem;
+  }
+
+  #politicas-proteccion ul li {
+    font-size: .8rem;
+  }
+}
