corregir posiscion hamburguesa iphone 11

--- a/do_coronafacturas_theme/css/styles-general.css
+++ b/do_coronafacturas_theme/css/styles-general.css
@@ -992,7 +992,7 @@
 
   .menu_div_m {
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
   }
 
