corregir color select iphone 11

--- a/do_coronafacturas_theme/css/style-registro.css
+++ b/do_coronafacturas_theme/css/style-registro.css
@@ -334,6 +334,7 @@ font-family: 'Corona Headline', sans-serif;
 	 -moz-appearance: none;
 	 -webkit-appearance: none;
 	 appearance: none;
+	 color: #000;
 }
 
 .p_formulario_ div .js-form-item-day{
