--- a/do_coronafacturas_theme/templates/navigation/footer.html.twig
+++ b/do_coronafacturas_theme/templates/navigation/footer.html.twig
@@ -13,7 +13,7 @@
         </ul>
       </div>
       <div class="footer-corona_m">
-        <img src="/{{ directory }}/images/Corona-Logo-Footer.jpg">
+        <a href='/'><img src="/{{ directory }}/images/Corona-Logo-Footer.jpg"></a>
       </div>
     </div>
     <div class="footer-disclaim_m">
