--- a/do_coronafacturas_theme/templates/nodes/node--error404.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/node--error404.html.twig
@@ -6,6 +6,6 @@
       <p>La página que buscas no existe.</p>
     </div>
 
-    <div><a href="#">VOLVER AL INICIO</a></div>
+    <div><a href="/">VOLVER AL INICIO</a></div>
   </div>
 </section>
