--- a/do_coronafacturas_theme/css/style-registro.css
+++ b/do_coronafacturas_theme/css/style-registro.css
@@ -1,6 +1,6 @@
 /*
 
-font-family: 'Inter', sans-serif;
+font-family: "Inter 400";
 font-family: 'Roboto', sans-serif;
 font-family: 'Corona Headline', sans-serif;
 
@@ -15,6 +15,11 @@ font-family: 'Corona Headline', sans-serif;
 @font-face {
   font-family: 'HelveticaMd';
   src: url("../fonts/HelveticaNeueLTStd-MdCn.otf");
+}
+
+@font-face {
+	font-family: 'Inter 400';
+	src: url("../fonts/Inter-Regular.ttf");
 }
 
 
@@ -35,20 +40,23 @@ font-family: 'Corona Headline', sans-serif;
 	font-size: 2.6rem;
 	text-align: center;
 	color: #0D2240;
+	margin-top: 2rem;
+	order: 1;
 }
 
 
 .p_g_navegacion_{
-	margin-top: 5.5rem;
+	margin-top: 3.5rem;
 	display: flex;
 	justify-content: center;
 	flex-direction: row;
 	align-items: center;
 	margin-left: -15rem;
+	order: 3;
 }
 
 .p_g_navegacion_2{
-	margin-left: -8rem;
+	margin-left: -4%;
 }
 
 
@@ -70,6 +78,9 @@ font-family: 'Corona Headline', sans-serif;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: #fff;
+	position: relative;
+	z-index: 10;
 }
 
 .p_g_navegacion_ .p_g_1 {
@@ -78,9 +89,27 @@ font-family: 'Corona Headline', sans-serif;
 	z-index: 999;
 }
 
+.p_g_navegacion_ .p_g_active.p_g_1 .p_g_circle p {
+	color: #fff;
+	top: 0;
+}
+
 .p_g_navegacion_ .p_g_2{
 	position: relative;
 	top: 0rem;
+}
+
+.p_g_navegacion_ .p_g_active.p_g_2 .p_g_circle p {
+	color: #fff;
+}
+
+.p_g_navegacion_ .p_g_active.p_g_3 .p_g_circle p {
+	color: #fff;
+}
+
+.p_g_navegacion_ .p_g_active.p_g_3 .p_g_text {
+	margin-top: 1rem;
+	font-family: 'Inter 400';
 }
 
 
@@ -103,12 +132,12 @@ font-family: 'Corona Headline', sans-serif;
 	font-family: Corona Headline;
 	font-weight: bold;
 	position: relative;
-	top: -.3rem;
+	top: -.1rem;
 }
 
 .p_g_navegacion_ .p_g_  .p_g_text,
 .p_g_navegacion_ .p_g_active  .p_g_text_r{
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: 400;
 	font-size: .9rem;
@@ -135,7 +164,7 @@ font-family: 'Corona Headline', sans-serif;
 }
 
 .p_g_navegacion_ .hr_pg_2{
-	left:  -1rem;
+	left:  -1.1rem;
 }
 
 .p_g_tag_{
@@ -146,7 +175,7 @@ font-family: 'Corona Headline', sans-serif;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-
+	order: 2;
 }
 
 .p_g_tag_ p{
@@ -159,6 +188,7 @@ font-family: 'Corona Headline', sans-serif;
 	opacity: 0.5;
 	cursor: pointer;
 	border-bottom: 2px solid transparent;
+	text-transform: uppercase;
 }
 
 .p_g_tag_ .active{
@@ -172,7 +202,7 @@ font-family: 'Corona Headline', sans-serif;
 	width: 100%;
 	max-width: 50%;
 	margin-top: 3.5rem;
-
+	margin-bottom: 3rem;
 }
 
 .p_form_login_{
@@ -190,22 +220,26 @@ font-family: 'Corona Headline', sans-serif;
 	font-size: 1.4rem;
   text-transform: uppercase;
 	color: #0D2240;
+	text-align: center;
 }
 
 .p_form_registro_ p{
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: 500;
-	font-size: .9rem;
+	font-size: 1rem;
 	line-height: 24px;
 	color: #0D2240;
+	text-align: center;
+	width: 80%;
+	margin: 0 auto;
 	margin-top: .5rem;
 }
 
 .p_form_login_ p{
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
-	font-weight: 500;
+	font-weight: bold;
 	font-size: 1rem;
 	line-height: 24px;
 	color: #0D2240;
@@ -216,7 +250,7 @@ font-family: 'Corona Headline', sans-serif;
 .p_formulario_{
 	margin: 0 auto;
 	width: 100%;
-	/* max-width: 80%; */
+	max-width: 80%;
 	margin-top: 3rem;
 }
 .p_formulario_login{
@@ -230,7 +264,7 @@ font-family: 'Corona Headline', sans-serif;
 }
 
 .p_formulario_ div label{
-	font-family:  'Inter', sans-serif;
+	font-family: 'Inter 400';
 	font-style: normal;
 	font-weight: 600;
 	font-size: .9rem;
@@ -253,7 +287,7 @@ font-family: 'Corona Headline', sans-serif;
 	border: 1px solid #0D2240;
 	padding: .7rem 1.5rem;
 	border-radius: 10px;
-	font-family:  'Inter', sans-serif;
+	font-family: 'Inter 400';
 	font-size: .9rem;
 	margin-top: .2rem;
   width: 100%;
@@ -261,6 +295,28 @@ font-family: 'Corona Headline', sans-serif;
 
 .p_formulario_ div .form-checkbox{
   width: auto;
+
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	-ms-progress-appearance: none;
+	width: 18px;
+	height: 18px;
+	border: 1px solid #0D2240;
+	border-radius: 4px;
+	background-color: #EDEDED;
+	transition: all .5s;
+	cursor: pointer;
+	padding: 0;
+}
+
+.p_formulario_ div .form-checkbox:checked {
+	transform: scale(1);
+	background-image: url("../images/checked-form.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 12px;
+	background-color: #FFC627;
 }
 
 .p_formulario_ div .password-field,
@@ -270,7 +326,7 @@ font-family: 'Corona Headline', sans-serif;
 
 .password-strength__title{
   color: red;
-  font-family:  'Inter', sans-serif;
+  font-family: 'Inter 400';
 }
 
 .p_formulario_ div div {
@@ -290,7 +346,7 @@ font-family: 'Corona Headline', sans-serif;
 
 .p_formulario_ div div .form-item--error-message{
   width: 100% !important;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter 400";
   font-size: .8rem;
 }
 
@@ -310,11 +366,15 @@ font-family: 'Corona Headline', sans-serif;
   width: auto;
 }
 
+.p_formulario_ div div .js-form-type-checkbox.js-form-item-aceptarmkt label {
+	font-weight: bold;
+}
+
 .p_formulario_ div .js-form-type-password-confirm div{
   width: 100%;
   display: flex;
   flex-direction: column;
-  font-family:  'Inter', sans-serif;
+  font-family: 'Inter 400';
   color: red;
   font-size: .8rem;
   margin: .2rem 0;
@@ -326,7 +386,7 @@ font-family: 'Corona Headline', sans-serif;
 	border: 1px solid #0D2240;
 	padding: .7rem 1.5rem;
 	border-radius: 10px;
-	font-family:  'Inter', sans-serif;
+	font-family: 'Inter 400';
 	font-size: .9rem;
 	margin-top: .2rem;
 	width: 100%;
@@ -335,6 +395,36 @@ font-family: 'Corona Headline', sans-serif;
 	 -webkit-appearance: none;
 	 appearance: none;
 	 color: #000;
+}
+
+/* .p_formulario_ div div div select,
+.p_formulario_ div div select,
+.p_formulario_ div select {
+	font-family: 'Inter 400';
+	color: #000;
+	background-color: #fff;
+}
+
+.p_formulario_ div div div select:hover,
+.p_formulario_ div div select:hover,
+.p_formulario_ div select:hover {
+	color: #fff !important;
+	background-color: #0D2240 !important;
+} */
+
+.p_formulario_ div .js-form-type-password-confirm div .password-confirm.js-password-confirm.js-password-confirm-message {
+	color: #0D2240;
+	font-family: "Inter 400";
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.p_formulario_ div .js-form-type-password-confirm div .password-confirm.js-password-confirm.js-password-confirm-message span {
+	padding-left: .25rem;
+	display: inline-block;
+	width: 5%;
 }
 
 .p_formulario_ div .js-form-item-day{
@@ -349,11 +439,26 @@ font-family: 'Corona Headline', sans-serif;
   width: 100%;
 }
 
+/* .p_formulario_ div .js-form-item-day select{
+  background-image: none !important;
+	text-align: center;
+}
+
+.p_formulario_ div .js-form-item-month select{
+  background-image: none !important;
+	text-align: center;
+}
+
+.p_formulario_ div .js-form-item-year select{
+  background-image: none !important;
+	text-align: center;
+} */
+
 
 
 .p_formulario_ div input::placeholder{
-	font-family:  'Inter', sans-serif;
-	color: rgba(141, 144, 149, 1);
+	font-family: 'Inter 400';
+	color: #0D2240;
 	font-size: .9rem;
 
 }
@@ -371,15 +476,20 @@ font-family: 'Corona Headline', sans-serif;
 	flex-direction: row;
 	justify-content: flex-start;
 	margin-bottom: 1rem;
+	align-items: center;
   /* width: 100%; */
 }
 
 .p_formulario_ .p_f_check_ div label{
 	margin-left: 1rem;
-	font-family:  'Inter', sans-serif;
+	font-family: 'Inter 400';
 	font-style: normal;
 	font-weight: normal;
 	font-size: .8rem;
+	color: #0D2240;
+}
+
+.p_formulario_ .p_f_check_ div label a {
 	color: #0D2240;
 }
 
@@ -411,7 +521,7 @@ font-family: 'Corona Headline', sans-serif;
 	text-transform: uppercase;
 	color: #0D2240;
 	display: inline-block;
-	background: #FFC627;
+	background-color: #FFC627;
 	border-radius: 25px;
 	border: none;
 	cursor: pointer;
@@ -430,7 +540,7 @@ font-family: 'Corona Headline', sans-serif;
 }
 
 .p_formulario_ .p_f_btn a{
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: 600;
 	font-size: .7rem;
@@ -449,7 +559,7 @@ font-family: 'Corona Headline', sans-serif;
 	width: 100%;
 	max-width: 30%;
 	margin-top: 5.5rem;
-  min-height: 60vh;
+  min-height: 65vh;
 }
 
 .form_upload_ .title_f_up{
@@ -467,14 +577,15 @@ font-family: 'Corona Headline', sans-serif;
 }
 
 
-.form_upload_  .fm_up_ div{
+.form_upload_ .fm_up_ div{
 	margin-bottom: 1rem;
 	display: flex;
 	flex-direction: column;
+	font-family: 'Inter 400';
 }
 
 .form_upload_  .fm_up_ div label{
-	font-family:  'Inter', sans-serif;
+	font-family:  'Inter 400';
 	font-style: normal;
 	font-weight: 600;
 	font-size: .9rem;
@@ -485,7 +596,7 @@ font-family: 'Corona Headline', sans-serif;
 	border: 1px solid #0D2240;
 	padding: .7rem 1.5rem;
 	border-radius: 10px;
-	font-family:  'Inter', sans-serif;
+	font-family: 'Inter 400';
 	font-size: .9rem;
 	margin-top: .2rem;
 	width: 100%;
@@ -498,14 +609,25 @@ font-family: 'Corona Headline', sans-serif;
 
 /*.form_upload_ .fm_up_ div #input_file_fac{
 	display: none;
-}*/
+}
 
 .form_upload_ .fm_up_ div #edit-archivo-upload{
 	display: none;
-}
+}*/
 
 .form_upload_ .fm_up_ div #edit-archivo--label{
-	display: none;
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	width: 100%;
+	height: 70px;
+	background-color: #C0C0C0;
+	border-radius: 4px;
+	background-image: url("../images/upload.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	cursor: pointer;
+	font-size: 0;
 }
 
 .form_upload_ .fm_up_ div button{
@@ -523,7 +645,7 @@ font-family: 'Corona Headline', sans-serif;
 	color: #282828;
 	margin-top: .6rem;
 	font-size: .8rem !important;
-	font-family:  'Inter', sans-serif;
+	font-family:  'Inter 400'
 }
 
 .form_upload_ .fm_up_ .fm_up_btn{
@@ -531,7 +653,7 @@ font-family: 'Corona Headline', sans-serif;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: 2.5rem;
+	margin-top: 1rem;
 }
 
 .form_upload_ .fm_up_ .fm_up_btn input,
@@ -551,7 +673,7 @@ font-family: 'Corona Headline', sans-serif;
 
 .form_upload_ p {
 	margin-top: 2rem;
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: normal;
 	font-size: 1rem;
@@ -624,7 +746,7 @@ font-family: 'Corona Headline', sans-serif;
 	color: #FFC627;
 	font-size: 1.3rem;
 	cursor: pointer;
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 }
 
 .modal_c_ .modal_c_body{
@@ -657,7 +779,7 @@ font-family: 'Corona Headline', sans-serif;
 
 .modal_c_ .modal_c_body p {
 	margin-top: 1rem;
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: normal;
 	font-size: .9rem;
@@ -757,7 +879,7 @@ font-family: 'Corona Headline', sans-serif;
 }
 
 .header_perfil_ .perfil_info_ .p_i_nav a p{
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: normal;
 	font-size: .9rem;
@@ -768,7 +890,7 @@ font-family: 'Corona Headline', sans-serif;
 
 .header_perfil_ .perfil_info_ .text_p{
 	margin-top: 1rem;
-	font-family: 'Inter', sans-serif;
+	font-family: "Inter 400";
 	font-style: normal;
 	font-weight: normal;
 	font-size: .9rem;
@@ -803,13 +925,148 @@ font-family: 'Corona Headline', sans-serif;
 	color: #0D2240;
 }
 
-@media (max-width: 600px) {
+#edit-archivo input {
+	
+
+	display: none;
+}
+
+#ajax-wrapper {
+	margin-top: 1rem;
+}
+
+.js-form-item.form-item.js-form-type-managed-file.form-item-archivo.js-form-item-archivo label {
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	width: 100%;
+	height: 70px;
+	background-color: #C0C0C0;
+	border-radius: 4px;
+	background-image: url("../images/upload.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	cursor: pointer;
+	font-size: 0;
+}
+
+.js-form-item.form-item.js-form-type-managed-file.form-item-archivo.js-form-item-archivo div input[type="file"] {
+	display: none;
+}
+
+.js-form-item.form-item.js-form-type-textfield.form-item-idfactura.js-form-item-idfactura.form-no-label input {
+	border: 1px solid #0D2240;
+	padding: 0.7rem 1.5rem;
+	border-radius: 10px;
+	font-family: "Inter 400";
+	font-size: .9rem;
+	margin-top: 0.2rem;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	margin-top: 0.4rem;
+}
+
+.p_g_text_r {
+	margin-top: 1rem;
+	color: #0D2240;
+	font-family: "Inter 400";
+}
+
+#emcabezado {
+  display: flex;
+  flex-direction: column;
+}
+
+#edit-archivo--description {
+	font-family: "Inter 400";
+	color: #282828;
+	font-weight: bold;
+}
+
+.js-form-item.form-item.js-form-type-checkbox.form-item-aceptartyc.js-form-item-aceptartyc {
+	position: relative;
+}
+
+.js-form-item.form-item.js-form-type-checkbox.form-item-aceptartyc.js-form-item-aceptartyc input {
+	position: absolute;
+	top: 0;
+	margin-top: 0;
+}
+
+.js-form-item.form-item.js-form-type-checkbox.form-item-aceptartyc.js-form-item-aceptartyc label {
+	padding-left: 1.3rem;
+}
+
+.is_uploaded {
+	background-color: #FFCA33 !important;
+	color: #0D2240 !important;
+}
+
+@media (max-width: 975px) {
+
+	.error-date {
+		position: absolute;
+	}
+
+	.js-form-item.form-item.js-form-type-checkbox.form-item-aceptartyc.js-form-item-aceptartyc label {
+		padding-left: .2rem;
+	}
+
+	.form_upload_ .fm_up_ div {
+		margin-bottom: 0;
+	}
+
+	.form_upload_ .fm_up_ div:nth-child(1) {
+		margin-bottom: 1rem;
+	}
+
+	.form_upload_ .fm_up_ div:nth-child(2) {
+		margin-bottom: 1rem;
+	}
+
+	.p_g_text_r {
+		text-align: center;
+	}
+
+	.form_upload_ .fm_up_ .fm_up_btn {
+		margin-top: 0rem;
+		margin-bottom: 3rem;
+	}
+
+	.p_formulario_ .p_f_check_ div {
+		justify-content: space-between;
+	}
+
+	.p_formulario_ div div .js-form-type-checkbox {
+		position: relative;
+	}
+
+	.p_formulario_ div .form-checkbox {
+		position: absolute;
+		left: 0;
+		top: 0;
+		margin-top: 0;
+	}
+
+	.p_formulario_ .p_f_check_ div label {
+		margin-left: 1.5rem;
+	}
+
+	.p_formulario_ div div .js-form-item select {
+		background: url("../images/flecha_select.png") no-repeat 90% 50% #fff !important;
+	}
+
+	.p_g_title_ {
+		font-size: 2.2rem;
+	}
+
   .header_perfil_{
   	max-width: 90%;
   }
 
   .p_formulario_ {
-    max-width: 80%;
+    max-width: 90%;
   }
 
   .header_perfil_ .perfil_thumb_{
@@ -834,6 +1091,8 @@ font-family: 'Corona Headline', sans-serif;
 
   .form_upload_{
   	max-width: 85%;
+		min-height: 55vh;
+		margin-top: 3rem;
   }
 
   .p_g_tag_{
@@ -851,7 +1110,7 @@ font-family: 'Corona Headline', sans-serif;
   }
 
   .p_form_registro_ p{
-  	width: 331px;
+  	width: 90%;
   }
 
   .p_form_registro_ p br{
@@ -869,6 +1128,7 @@ font-family: 'Corona Headline', sans-serif;
 
   .p_formulario_ .p_f_btn input, .p_formulario_ .p_f_btn button{
   	margin-top: 2rem;
+		padding-top: .8rem;
   }
 
   .p_formulario_login{
@@ -891,7 +1151,16 @@ font-family: 'Corona Headline', sans-serif;
 
   .p_g_navegacion_ .p_g_ .p_g_circle p, .p_g_navegacion_ .p_g_active .p_g_circle p{
   	font-size: 30px;
+		top: unset;
+		padding-top: .4rem;
+		display: flex;
+		align-items: center;
+		align-self: center;
   }
+
+	/* .p_g_navegacion_ .p_g_ .p_g_circle, .p_g_navegacion_ .p_g_active .p_g_circle {
+		align-items: unset;
+	} */
 
   .p_g_navegacion_ hr{
   	width: 60px;
@@ -915,7 +1184,7 @@ font-family: 'Corona Headline', sans-serif;
   }
 
   .p_g_navegacion_ .hr_pg_1{
-  	right: -1.5rem;
+  	right: -1.3rem;
   }
 
   .p_g_navegacion_ .p_g_3{
@@ -925,6 +1194,7 @@ font-family: 'Corona Headline', sans-serif;
 
   .p_g_navegacion_ .hr_pg_2{
   	margin-left: -.6rem;
+		left: -.8rem;
   }
 
 }
