--- a/do_coronafacturas_theme/templates/navigation/header.html.twig
+++ b/do_coronafacturas_theme/templates/navigation/header.html.twig
@@ -1,16 +1,16 @@
 <header class="header_m">
     <nav class="nav_m" id="nav_mob_fix">
-      <div class="nav_logo_m"><img src="/{{ directory }}/images/corona-logo.jpg" alt="Corona Logo"></div>
+      <div class="nav_logo_m"><a href="/"><img src="/{{ directory }}/images/corona-logo.jpg" alt="Corona Logo"></a></div>
       <div id="header_links" class="header_links_m">
         <ul>
             {% for item in header_link_menu %}
-            <li><a href="{{ item['url'] }}">{{ item['title'] }}</a></li>
+            <li><a  class="link_menu_corona" href="{{ item['url'] }}">{{ item['title'] }}</a></li>
             {% endfor %}
         </ul>
       </div>
       {# div usuario anonimo #}
       <div class="header_registro_m header_registro_m-2">
-        <div class="header_registrate_m"><a href="/registro">REGISTRATE Y GANA</a></div>
+        <div class="header_registrate_m"><a href="/registro">REGÍSTRATE Y GANA</a></div>
       </div>
       <div id="menu_header_m" class="menu_div_m">
         <img src="/{{directory}}/images/barras.svg" class="menu_m" alt="Barras Menu" id="m_bar">
