--- a/do_coronafacturas_theme/sources_tropical/src/sass/components/_menuFixed.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/components/_menuFixed.scss
@@ -110,6 +110,10 @@
         font-size: 10px;
     }
 
+    &__content {
+        color: #11223e;
+    }
+
     &__close {
         position: absolute;
         display: flex;
