new images webp and icon 90 cal

--- a/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
@@ -185,6 +185,11 @@
 												<span>FRUTA</span>
 											</p>
 										</div>
+										<div class="points__cal">
+											<div class="points__cal-img">
+                        <img src="{{directory}}/sources_tropical/dist/assets/images/90cal.webp" alt="" title="">
+											</div>
+										</div>
 									</div>
 									<a href="{{ paragraph.entity.field_link.0.url }}" class="button" id="btn-buy" onclick="dataLayerBuyBtn('{{ paragraph.entity.field_title.value | raw }}')">{{ paragraph.entity.field_link.title }}</a>
 								</div>
