--- a/do_coronafacturas_theme/sources_tropical/src/sass/components/_faq.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/components/_faq.scss
@@ -1,7 +1,7 @@
 .containerFaq {
     max-width: 1275px;
     width: 100%;
-    margin: 0 auto;
+    margin: 50px auto 0;
     padding-bottom: 60px;
     font-family: $coronaHeadlineSB;
     font-size: 18px;
@@ -87,7 +87,7 @@
                     transition: ease all .3s;
                     min-width: 30px;
                     min-height: 30px;
-                    
+
                     &::before, &::after {
                         content: '';
                         position: absolute;
