--- a/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
@@ -962,6 +962,18 @@
             display: none;
         }
     }
+    &__hoja3 {
+        position: absolute;
+        top: -20%;
+        width: 300px;
+        left: -10%;
+
+        @include mq(tab) {
+            top: -15%;
+            width: 250px;
+            left: -26%;
+        }
+    }
 }
 
 .game {
@@ -1097,6 +1109,11 @@
         margin: auto;
         max-width: 1400px;
         padding: 200px 50px 100px;
+
+        @include mq(tab) {
+          padding: 110px 25px 105px;
+        }
+
     }
 
     &__title {
@@ -1189,6 +1206,10 @@
   background-image: url("../assets/images/bgContainerExperience.webp");
   background-repeat: no-repeat;
   background-size: auto 110%;
+
+  @include mq(tab) {
+    padding: 70px 25px;
+  }
 
   &__title {
     font-family: $coronaHeadlineSB;
