--- a/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
@@ -1182,6 +1182,7 @@
         border-radius: 8px;
         border: none;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        width: max-content;
     }
 
     @include mq {
@@ -1225,6 +1226,7 @@
     padding: 12px 40px;
     background: #fff;
     border-radius: 8px;
+    width: max-content;
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
