--- a/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
@@ -966,12 +966,10 @@
         position: absolute;
         top: -20%;
         width: 300px;
-        left: -10%;
+        left: -130px;
 
         @include mq(tab) {
-            top: -15%;
             width: 250px;
-            left: -26%;
         }
     }
 }
