--- a/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
@@ -299,7 +299,8 @@
 				{% endfor %}
 			</ul>
 		</div>
-		<img src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/hoja3.png')}}" class="compra__hoja3" alt=""/>
+		<img src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/hoja3.png')}}" class="compra__hoja3" alt="compra__hoja3"/>
+		<img src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/hoja4.png')}}" class="compra__hoja4" alt="compra__hoja4"/>
 	</div>
 
 	<div class="containerExperience">
@@ -307,6 +308,7 @@
 		<h2 class="containerExperience__title">{{ paragraph.entity.field_title.value }}</h2>
 		<a class="containerExperience__button" href="{{ paragraph.entity.field_link.0.url }}" target="blank" onclick="sendDataLayer('Corona Tropical','Ir ahora','{{ paragraph.entity.field_commtitle.value }}')">{{ paragraph.entity.field_link.title }}</a>
 		{% endfor %}
+		<img src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/hoja5.png')}}" class="compra__hoja5" alt="compra__hoja5"/>
 	</div>
 
 	<div class="containerFaq">
